--- a/Index.html
+++ b/Index.html
@@ -15,5 +15,45 @@
     <link rel="stylesheet" href="Styles/main.css" />
     <link rel="stylesheet" href="Styles/normalize.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- SITE HEADER -->
+    <header class="site-header">
+      <div class="site-header-top">
+        <div class="site-header-top-container container">
+          <!-- SITE-HEADER-LOGO -->
+          <a class="site-header-logo" href="">
+            <img
+              src="Images/logo.svg"
+              alt="Site header logo"
+              width="264"
+              height="28"
+            />
+          </a>
+
+          <!-- CURRENCY-RATES -->
+          <ul class="currency-rates">
+            <li class="currency-rates-item">
+              <b class="currency-rates-type">$</b>
+              <span class="currency-rates-value">12484</span>
+            </li>
+            <li class="currency-rates-item">
+              <b class="currency-rates-type">P</b>
+              <span class="currency-rates-value">137.49</span>
+            </li>
+          </ul>
+
+          <!-- GLOBAL-SEARCH-FORM -->
+
+          <!-- LANG TOGGLE -->
+          <div class="lang-toggle">
+            <a class="lang-toggle-link lang-toggle-link-active" href="#">УЗ</a>
+            <a class="lang-toggle-link" href="#">РУ</a>
+          </div>
+
+          <!-- SITE-HEADER-BTN -->
+          <a class="button button-primary" href="#">Войти</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
