add header-top search and foces styles

--- a/Index.html
+++ b/Index.html
@@ -43,6 +43,20 @@
           </ul>
 
           <!-- GLOBAL-SEARCH-FORM -->
+          <form
+            class="global-search-form"
+            action="https://echo.htmlacademy.ru"
+            method="GET"
+          >
+            <input
+              class="global-search-form-input"
+              type="text"
+              name="search"
+              placeholder="Поиск"
+              aria-label="Поиск"
+              required
+            />
+          </form>
 
           <!-- LANG TOGGLE -->
           <div class="lang-toggle">
